@@ -21,15 +21,17 @@ package com.puppycrawl.tools.checkstyle.checks.imports;
 
 import static com.puppycrawl.tools.checkstyle.checks.imports.CustomImportOrderCheck.MSG_LEX;
 import static com.puppycrawl.tools.checkstyle.checks.imports.CustomImportOrderCheck.MSG_LINE_SEPARATOR;
+import static com.puppycrawl.tools.checkstyle.checks.imports.CustomImportOrderCheck.MSG_NONGROUP_EXPECTED;
 import static com.puppycrawl.tools.checkstyle.checks.imports.CustomImportOrderCheck.MSG_NONGROUP_IMPORT;
 import static com.puppycrawl.tools.checkstyle.checks.imports.CustomImportOrderCheck.MSG_ORDER;
 import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 
+import org.apache.commons.lang3.ArrayUtils;
 import org.junit.Test;
 
 import com.puppycrawl.tools.checkstyle.BaseCheckTestSupport;
@@ -39,32 +41,47 @@ import com.puppycrawl.tools.checkstyle.api.DetailAST;
 import com.puppycrawl.tools.checkstyle.api.TokenTypes;
 
 public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
-    /**
-     * @throws Exception
-     */
+    /** Shortcuts to make code more compact. */
+    private static final String STATIC = CustomImportOrderCheck.STATIC_RULE_GROUP;
+    private static final String SAME = CustomImportOrderCheck.SAME_PACKAGE_RULE_GROUP;
+    private static final String THIRD = CustomImportOrderCheck.THIRD_PARTY_PACKAGE_RULE_GROUP;
+    private static final String STD = CustomImportOrderCheck.STANDARD_JAVA_PACKAGE_RULE_GROUP;
+    private static final String SPECIAL = CustomImportOrderCheck.SPECIAL_IMPORTS_RULE_GROUP;
+
+    @Test
+    public void testGetRequiredTokens() {
+        CustomImportOrderCheck checkObj = new CustomImportOrderCheck();
+        int[] expected = {
+            TokenTypes.IMPORT,
+            TokenTypes.STATIC_IMPORT,
+            TokenTypes.PACKAGE_DEF,
+        };
+        assertArrayEquals(expected, checkObj.getRequiredTokens());
+    }
+
     @Test
     public void testCustom() throws Exception {
         final DefaultConfiguration checkConfig =
                 createCheckConfig(CustomImportOrderCheck.class);
         checkConfig.addAttribute("standardPackageRegExp", "^(java|javax)\\.");
         checkConfig.addAttribute("thirdPartyPackageRegExp", "com|org");
-        checkConfig
-                .addAttribute("customImportOrderRules",
-                        "STATIC###SAME_PACKAGE(3)###THIRD_PARTY_PACKAGE###STANDARD_JAVA_PACKAGE");
+        checkConfig.addAttribute("customImportOrderRules",
+                "STATIC###SAME_PACKAGE(3)###THIRD_PARTY_PACKAGE###STANDARD_JAVA_PACKAGE");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
         final String[] expected = {
-            "4: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT"),
-            "8: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "9: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "10: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "11: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "12: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "13: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "14: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "15: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "16: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "17: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "18: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
+            "4: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT", "java.io.File.createTempFile"),
+            "5: " + getCheckMessage(MSG_LEX, "java.awt.print.Paper.*", "java.io.File.createTempFile"),
+            "8: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.awt.Button"),
+            "9: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.awt.Frame"),
+            "10: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.awt.Dialog"),
+            "11: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.awt.color.ColorSpace"),
+            "12: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.awt.event.ActionEvent"),
+            "13: " + getCheckMessage(MSG_ORDER, STD, SAME, "javax.swing.JComponent"),
+            "14: " + getCheckMessage(MSG_ORDER, STD, SAME, "javax.swing.JTable"),
+            "15: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.io.File"),
+            "16: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.io.IOException"),
+            "17: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.io.InputStream"),
+            "18: " + getCheckMessage(MSG_ORDER, STD, SAME, "java.io.Reader"),
         };
 
         verify(checkConfig, getPath("imports" + File.separator
@@ -74,10 +91,9 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
     /**
      * Checks different group orderings and imports which are out of those ones
      * specified in the configuration.
-     * @throws Exception
      */
     @Test
-    public void testGoogleStyleguideConfiguraiton() throws Exception {
+    public void testStaticStandardThird() throws Exception {
         final DefaultConfiguration checkConfig =
                 createCheckConfig(CustomImportOrderCheck.class);
         checkConfig.addAttribute("thirdPartyPackageRegExp", "com.|org.");
@@ -85,10 +101,14 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
                 "STATIC###STANDARD_JAVA_PACKAGE###THIRD_PARTY_PACKAGE");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
         final String[] expected = {
-            "4: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT"),
-            "10: " + getCheckMessage(MSG_LEX, "java.awt.Dialog"),
-            "15: " + getCheckMessage(MSG_LEX, "java.io.File"),
-            "22: " + getCheckMessage(MSG_LEX, "com.google.common.collect.*"),
+            "4: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT", "java.io.File.createTempFile"),
+            "5: " + getCheckMessage(MSG_LEX, "java.awt.print.Paper.*", "java.io.File.createTempFile"),
+            "10: " + getCheckMessage(MSG_LEX, "java.awt.Dialog", "java.awt.Frame"),
+            "15: " + getCheckMessage(MSG_LEX, "java.io.File", "javax.swing.JTable"),
+            "16: " + getCheckMessage(MSG_LEX, "java.io.IOException", "javax.swing.JTable"),
+            "17: " + getCheckMessage(MSG_LEX, "java.io.InputStream", "javax.swing.JTable"),
+            "18: " + getCheckMessage(MSG_LEX, "java.io.Reader", "javax.swing.JTable"),
+            "22: " + getCheckMessage(MSG_LEX, "com.google.common.collect.*", "com.puppycrawl.tools.*"),
         };
 
         verify(checkConfig, getPath("imports" + File.separator
@@ -97,23 +117,25 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
 
     /**
      * Checks different combinations for same_package group.
-     * @throws Exception
      */
     @Test
     public void testNonSpecifiedImports() throws Exception {
         final DefaultConfiguration checkConfig =
                 createCheckConfig(CustomImportOrderCheck.class);
         checkConfig.addAttribute("thirdPartyPackageRegExp", "org.");
-        checkConfig
-                .addAttribute("customImportOrderRules",
-                        "STATIC###STANDARD_JAVA_PACKAGE###THIRD_PARTY_PACKAGE###SAME_PACKAGE(3)");
+        checkConfig.addAttribute("customImportOrderRules",
+                "STATIC###STANDARD_JAVA_PACKAGE###THIRD_PARTY_PACKAGE###SAME_PACKAGE(3)");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
         final String[] expected = {
-            "4: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT"),
-            "10: " + getCheckMessage(MSG_LEX, "java.awt.Dialog"),
-            "15: " + getCheckMessage(MSG_LEX, "java.io.File"),
-            "20: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "22: " + getCheckMessage(MSG_NONGROUP_IMPORT),
+            "4: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT", "java.io.File.createTempFile"),
+            "5: " + getCheckMessage(MSG_LEX, "java.awt.print.Paper.*", "java.io.File.createTempFile"),
+            "10: " + getCheckMessage(MSG_LEX, "java.awt.Dialog", "java.awt.Frame"),
+            "15: " + getCheckMessage(MSG_LEX, "java.io.File", "javax.swing.JTable"),
+            "16: " + getCheckMessage(MSG_LEX, "java.io.IOException", "javax.swing.JTable"),
+            "17: " + getCheckMessage(MSG_LEX, "java.io.InputStream", "javax.swing.JTable"),
+            "18: " + getCheckMessage(MSG_LEX, "java.io.Reader", "javax.swing.JTable"),
+            "20: " + getCheckMessage(MSG_ORDER, SAME, THIRD, "com.puppycrawl.tools.*"),
+            "22: " + getCheckMessage(MSG_NONGROUP_IMPORT, "com.google.common.collect.*"),
             "23: " + getCheckMessage(MSG_LINE_SEPARATOR, "org.junit.*"),
         };
 
@@ -130,11 +152,15 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
                 "STANDARD_JAVA_PACKAGE");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
         final String[] expected = {
-            "7: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "8: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "9: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "10: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "11: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
+            "4: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT", "java.io.File.createTempFile"),
+            "7: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STD, "java.util.List"),
+            "8: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STD, "java.util.StringTokenizer"),
+            "9: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STD, "java.util.*"),
+            "10: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STD, "java.util.concurrent.AbstractExecutorService"),
+            "11: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STD, "java.util.concurrent.*"),
+            "13: " + getCheckMessage(MSG_LEX, "com.puppycrawl.tools.*", "javax.swing.WindowConstants.*"),
+            "14: " + getCheckMessage(MSG_LEX, "com.*", "javax.swing.WindowConstants.*"),
+            "16: " + getCheckMessage(MSG_LEX, "com.google.common.base.*", "javax.swing.WindowConstants.*"),
         };
 
         verify(checkConfig, getPath("imports" + File.separator
@@ -142,7 +168,7 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
     }
 
     @Test
-    public void testSamePackageAndStatic() throws Exception {
+    public void testStaticSamePackage() throws Exception {
         final DefaultConfiguration checkConfig =
                 createCheckConfig(CustomImportOrderCheck.class);
         checkConfig.addAttribute("thirdPartyPackageRegExp", "org.");
@@ -150,37 +176,19 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
                 "STATIC###SAME_PACKAGE(3)");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
         final String[] expected = {
-            "4: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "5: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "6: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "7: " + getCheckMessage(MSG_ORDER, "STATIC"),
-            "8: " + getCheckMessage(MSG_ORDER, "STATIC"),
-            "10: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "11: " + getCheckMessage(MSG_ORDER, "STATIC"),
+            "5: " + getCheckMessage(MSG_LEX, "java.util.*", "java.util.StringTokenizer"),
+            "6: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.*"),
+            "7: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STATIC, "java.awt.Button.ABORT"),
+            "8: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STATIC, "javax.swing.WindowConstants.*"),
+            "9: " + getCheckMessage(MSG_LEX, "com.puppycrawl.tools.*", "java.util.StringTokenizer"),
+            "10: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.AbstractExecutorService"),
+            "11: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STATIC, "java.io.File.createTempFile"),
+            "12: " + getCheckMessage(MSG_LEX, "com.*", "java.util.StringTokenizer"),
         };
 
         verify(checkConfig, new File("src/test/resources-noncompilable/com/puppycrawl/tools/"
                 + "checkstyle/imports/"
                 + "InputCustomImportOrderSamePackage.java").getCanonicalPath(), expected);
-    }
-
-    @Test
-    public void testOnlySamePackage() throws Exception {
-        final DefaultConfiguration checkConfig =
-                createCheckConfig(CustomImportOrderCheck.class);
-        checkConfig.addAttribute("customImportOrderRules", "SAME_PACKAGE(3)");
-        checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
-        final String[] expected = {
-            "4: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "6: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "7: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "8: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "9: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-        };
-
-        verify(checkConfig, new File("src/test/resources-noncompilable/com/puppycrawl/tools/"
-                + "checkstyle/imports/"
-                + "InputCustomImportOrderSamePackage2.java").getCanonicalPath(), expected);
     }
 
     @Test
@@ -193,13 +201,14 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
                 "STATIC###SAME_PACKAGE(3)");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
         final String[] expected = {
-            "4: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "5: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "6: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "7: " + getCheckMessage(MSG_ORDER, "STATIC"),
-            "8: " + getCheckMessage(MSG_ORDER, "STATIC"),
-            "10: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "11: " + getCheckMessage(MSG_ORDER, "STATIC"),
+            "5: " + getCheckMessage(MSG_LEX, "java.util.*", "java.util.StringTokenizer"),
+            "6: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.*"),
+            "7: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STATIC, "java.awt.Button.ABORT"),
+            "8: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STATIC, "javax.swing.WindowConstants.*"),
+            "9: " + getCheckMessage(MSG_LEX, "com.puppycrawl.tools.*", "java.util.StringTokenizer"),
+            "10: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.AbstractExecutorService"),
+            "11: " + getCheckMessage(MSG_NONGROUP_EXPECTED, STATIC, "java.io.File.createTempFile"),
+            "12: " + getCheckMessage(MSG_LEX, "com.*", "java.util.StringTokenizer"),
         };
 
         verify(checkConfig, new File("src/test/resources-noncompilable/com/puppycrawl/tools/"
@@ -216,7 +225,8 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
                 "STATIC###STANDARD_JAVA_PACKAGE");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
         final String[] expected = {
-            "4: " + getCheckMessage(MSG_LEX, "java.io.File.createTempFile"),
+            "4: " + getCheckMessage(MSG_LEX, "java.io.File.createTempFile", "javax.swing.WindowConstants.*"),
+            "8: " + getCheckMessage(MSG_LEX, "com.*", "com.puppycrawl.tools.*"),
         };
 
         verify(checkConfig, getPath("imports" + File.separator
@@ -232,7 +242,7 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
         checkConfig.addAttribute("customImportOrderRules",
                 "STATIC###SPECIAL_IMPORTS###THIRD_PARTY_PACKAGE###STANDARD_JAVA_PACKAGE");
-        final String[] expected = {};
+        final String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
 
         verify(checkConfig, getPath("imports" + File.separator
                 + "InputCustomImportOrderNoValid.java"), expected);
@@ -248,16 +258,13 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
         checkConfig.addAttribute("customImportOrderRules",
                 "STATIC###SPECIAL_IMPORTS###THIRD_PARTY_PACKAGE###STANDARD_JAVA_PACKAGE");
         final String[] expected = {
-            "5: " + getCheckMessage(MSG_ORDER, "THIRD_PARTY_PACKAGE"),
+            "5: " + getCheckMessage(MSG_NONGROUP_EXPECTED, THIRD, "org.w3c.dom.Node"),
         };
 
         verify(checkConfig, getPath("imports" + File.separator
                 + "DOMSource.java"), expected);
     }
 
-    /**
-     * @throws Exception
-     */
     @Test
     public void testDefaultPackage2() throws Exception {
         final DefaultConfiguration checkConfig =
@@ -268,18 +275,18 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
 
         final String[] expected = {
-            "7: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT"),
-            "10: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "11: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "12: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "13: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "14: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "15: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "16: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "17: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "18: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "19: " + getCheckMessage(MSG_ORDER, "STANDARD_JAVA_PACKAGE"),
-            "23: " + getCheckMessage(MSG_LEX, "com.google.common.*"),
+            "7: " + getCheckMessage(MSG_LEX, "java.awt.Button.ABORT", "java.io.File.createTempFile"),
+            "10: " + getCheckMessage(MSG_ORDER, STD, THIRD, "java.awt.Button"),
+            "11: " + getCheckMessage(MSG_ORDER, STD, THIRD, "java.awt.Frame"),
+            "12: " + getCheckMessage(MSG_ORDER, STD, THIRD, "java.awt.Dialog"),
+            "13: " + getCheckMessage(MSG_ORDER, STD, THIRD, "java.awt.event.ActionEvent"),
+            "14: " + getCheckMessage(MSG_ORDER, STD, THIRD, "javax.swing.JComponent"),
+            "15: " + getCheckMessage(MSG_ORDER, STD, THIRD, "javax.swing.JTable"),
+            "16: " + getCheckMessage(MSG_ORDER, STD, THIRD, "java.io.File"),
+            "17: " + getCheckMessage(MSG_ORDER, STD, THIRD, "java.io.IOException"),
+            "18: " + getCheckMessage(MSG_ORDER, STD, THIRD, "java.io.InputStream"),
+            "19: " + getCheckMessage(MSG_ORDER, STD, THIRD, "java.io.Reader"),
+            "23: " + getCheckMessage(MSG_LEX, "com.google.common.*", "com.puppycrawl.tools.*"),
         };
 
         verify(checkConfig, new File("src/test/resources-noncompilable/com/puppycrawl/tools/"
@@ -294,9 +301,7 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
         checkConfig.addAttribute("separateLineBetweenGroups", "true");
         checkConfig.addAttribute("customImportOrderRules",
                 "SAME_PACKAGE(3)###THIRD_PARTY_PACKAGE###STANDARD_JAVA_PACKAGE###STATIC");
-        final String[] expected = {
-
-        };
+        final String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
 
         verify(checkConfig, getPath("imports" + File.separator
                 + "InputCustomImportOrderThirdPartyPackage.java"), expected);
@@ -308,10 +313,9 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
                 createCheckConfig(CustomImportOrderCheck.class);
         checkConfig.addAttribute("specialImportsRegExp", "antlr.*");
         checkConfig.addAttribute("customImportOrderRules",
-                "SAME_PACKAGE(3)###THIRD_PARTY_PACKAGE###STATIC###"
-                + "SPECIAL_IMPORTS");
+                "SAME_PACKAGE(3)###THIRD_PARTY_PACKAGE###STATIC###SPECIAL_IMPORTS");
         final String[] expected = {
-            "11: " + getCheckMessage(MSG_ORDER, "THIRD_PARTY_PACKAGE"),
+            "11: " + getCheckMessage(MSG_ORDER, THIRD, SPECIAL, "com.google.common.annotations.GwtCompatible"),
         };
 
         verify(checkConfig, getPath("imports" + File.separator
@@ -337,7 +341,7 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
         CustomImportOrderCheck testCheckObject =
                 new CustomImportOrderCheck();
         int[] actual = testCheckObject.getAcceptableTokens();
-        int[] expected = new int[]{
+        int[] expected = {
             TokenTypes.IMPORT,
             TokenTypes.STATIC_IMPORT,
             TokenTypes.PACKAGE_DEF,
@@ -352,20 +356,95 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
     public void testGetFullImportIdent() {
         Object actual;
         try {
-            Class<?> c = Class.forName(
+            Class<?> clazz = Class.forName(
                     "com.puppycrawl.tools.checkstyle.checks.imports.CustomImportOrderCheck");
-            Object t = c.newInstance();
-            Method m = c.getDeclaredMethod("getFullImportIdent", DetailAST.class);
-            m.setAccessible(true);
-            actual = m.invoke(t, (DetailAST) null);
+            Object t = clazz.getConstructor().newInstance();
+            Method method = clazz.getDeclaredMethod("getFullImportIdent", DetailAST.class);
+            method.setAccessible(true);
+            actual = method.invoke(t, (DetailAST) null);
         }
-        catch (Exception e) {
-            e.printStackTrace();
+        catch (ClassNotFoundException | NoSuchMethodException | InstantiationException
+                  | IllegalAccessException | InvocationTargetException ignored) {
             actual = null;
         }
 
         String expected = "";
-        assertEquals(expected, (String) actual);
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    public void testSamePackageDepth2() throws Exception {
+        final DefaultConfiguration checkConfig =
+                createCheckConfig(CustomImportOrderCheck.class);
+        checkConfig.addAttribute("sortImportsInGroupAlphabetically", "false");
+        checkConfig.addAttribute("separateLineBetweenGroups", "false");
+        checkConfig.addAttribute("customImportOrderRules",
+                "SAME_PACKAGE(2)");
+        final String[] expected = {
+            "7: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.*"),
+            "8: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.List"),
+            "9: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.StringTokenizer"),
+            "10: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.*"),
+            "11: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.AbstractExecutorService"),
+            "12: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.locks.LockSupport"),
+            "13: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.regex.Pattern"),
+            "14: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.regex.Matcher"),
+            };
+
+        verify(checkConfig, new File("src/test/resources-noncompilable/com/puppycrawl/tools/"
+                + "checkstyle/imports/"
+                + "InputCustomImportOrderSamePackageDepth2-5.java").getCanonicalPath(), expected);
+    }
+
+    @Test
+    public void testSamePackageDepth3() throws Exception {
+        final DefaultConfiguration checkConfig =
+                createCheckConfig(CustomImportOrderCheck.class);
+        checkConfig.addAttribute("sortImportsInGroupAlphabetically", "false");
+        checkConfig.addAttribute("separateLineBetweenGroups", "false");
+        checkConfig.addAttribute("customImportOrderRules",
+                "SAME_PACKAGE(3)");
+        final String[] expected = {
+            "10: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.*"),
+            "11: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.AbstractExecutorService"),
+            "12: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.locks.LockSupport"),
+            };
+
+        verify(checkConfig, new File("src/test/resources-noncompilable/com/puppycrawl/tools/"
+                + "checkstyle/imports/"
+                + "InputCustomImportOrderSamePackageDepth2-5.java").getCanonicalPath(), expected);
+    }
+
+    @Test
+    public void testSamePackageDepth4() throws Exception {
+        final DefaultConfiguration checkConfig =
+                createCheckConfig(CustomImportOrderCheck.class);
+        checkConfig.addAttribute("sortImportsInGroupAlphabetically", "false");
+        checkConfig.addAttribute("separateLineBetweenGroups", "false");
+        checkConfig.addAttribute("customImportOrderRules",
+                "SAME_PACKAGE(4)");
+        final String[] expected = {
+            "12: " + getCheckMessage(MSG_NONGROUP_EXPECTED, SAME, "java.util.concurrent.locks.LockSupport"),
+            };
+
+        verify(checkConfig, new File("src/test/resources-noncompilable/com/puppycrawl/tools/"
+                + "checkstyle/imports/"
+                + "InputCustomImportOrderSamePackageDepth2-5.java").getCanonicalPath(), expected);
+    }
+
+    @Test
+    public void testSamePackageDepthLongerThenActualPackage() throws Exception {
+        final DefaultConfiguration checkConfig =
+                createCheckConfig(CustomImportOrderCheck.class);
+        checkConfig.addAttribute("sortImportsInGroupAlphabetically", "false");
+        checkConfig.addAttribute("separateLineBetweenGroups", "false");
+        checkConfig.addAttribute("customImportOrderRules",
+                "SAME_PACKAGE(5)");
+        final String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
+
+        verify(checkConfig, new File("src/test/resources-noncompilable/com/puppycrawl/tools/"
+                + "checkstyle/imports/"
+                + "InputCustomImportOrderSamePackageDepth2-5.java").getCanonicalPath(), expected);
     }
 
     @Test(expected = CheckstyleException.class)
@@ -376,7 +455,7 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
         checkConfig.addAttribute("separateLineBetweenGroups", "false");
         checkConfig.addAttribute("customImportOrderRules",
                 "SAME_PACKAGE(-1)");
-        final String[] expected = {};
+        final String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
 
         verify(checkConfig, getPath("imports" + File.separator
                 + "InputCustomImportOrder.java"), expected);
@@ -390,7 +469,7 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
         checkConfig.addAttribute("separateLineBetweenGroups", "false");
         checkConfig.addAttribute("customImportOrderRules",
                 "SAME_PACKAGE(0)");
-        final String[] expected = {};
+        final String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
 
         verify(checkConfig, getPath("imports" + File.separator
                 + "InputCustomImportOrder.java"), expected);
@@ -400,15 +479,11 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
     public void testUnsupportedRule() throws Exception {
         final DefaultConfiguration checkConfig =
                 createCheckConfig(CustomImportOrderCheck.class);
-        checkConfig.addAttribute("customImportOrderRules", "SAME_PACKAGE(3)###UNSUPPORTED_RULE"); //#AAA##BBBB###CCCC####DDDD
+
+        // #AAA##BBBB###CCCC####DDDD
+        checkConfig.addAttribute("customImportOrderRules", "SAME_PACKAGE(3)###UNSUPPORTED_RULE");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
-        final String[] expected = {
-            "4: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "6: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "7: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "8: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-            "9: " + getCheckMessage(MSG_ORDER, "SAME_PACKAGE"),
-        };
+        final String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
 
         verify(checkConfig, getPath("imports" + File.separator
                 + "InputCustomImportOrder.java"), expected);
@@ -420,7 +495,7 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
                 createCheckConfig(CustomImportOrderCheck.class);
         checkConfig.addAttribute("customImportOrderRules", "SAME_PACKAGE(INT_IS_REQUIRED_HERE)");
         checkConfig.addAttribute("sortImportsInGroupAlphabetically", "true");
-        final String[] expected = {};
+        final String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
 
         verify(checkConfig, getPath("imports" + File.separator
                 + "InputCustomImportOrder.java"), expected);
@@ -431,7 +506,7 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
         final DefaultConfiguration checkConfig =
                 createCheckConfig(CustomImportOrderCheck.class);
         checkConfig.addAttribute("customImportOrderRules", "SAME_PACKAGE(3)");
-        final String[] expected = {};
+        final String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
 
         verify(checkConfig, new File("src/test/resources/com/puppycrawl/tools/"
                 + "checkstyle/imports/"
@@ -442,17 +517,11 @@ public class CustomImportOrderCheckTest extends BaseCheckTestSupport {
     public void testDefaultConfiguration() throws Exception {
         final DefaultConfiguration checkConfig =
             createCheckConfig(CustomImportOrderCheck.class);
-        String[] expected = {
-        };
+        String[] expected = ArrayUtils.EMPTY_STRING_ARRAY;
 
-        try {
-            createChecker(checkConfig);
-            verify(checkConfig, getPath("imports" + File.separator
-                + "InputCustomImportOrder.java"), expected);
-        }
-        catch (Exception ex) {
-            // Exception is not expected
-            fail();
-        }
+        createChecker(checkConfig);
+        verify(checkConfig, getPath("imports" + File.separator
+            + "InputCustomImportOrder.java"), expected);
     }
+
 }
